# swagger_server/controllers/course_controller.py
@@ -4,6 +4,20 @@ from swagger_server.models.course import Course  # noqa: E501
 from swagger_server.util import db
 
 
+def course_by_id(course_id):  # noqa: E501
+    """Get a specific course by ID
+
+     # noqa: E501
+
+    :param course_id:
+    :type course_id: int
+
+    :rtype: Course
+    """
+    i = db.cursor().execute("SELECT * FROM course WHERE id = ?", [course_id]).fetchone()
+    return Course(i[0], i[1], i[2], i[3], i[4], i[5])  # util.deserialize_model(i, Course)
+
+
 def courses():  # noqa: E501
     """Get all the courses
 
